Bugzilla bug #72014: fixed DBM temporary file problems on OS/2.  Thanks to Javier Pedemonte <pedemont@us.ibm.com> for the patch.  r=relyea,wtc. sr=blizzard. a=asa@mozilla.org for the trunk and mozilla0.9.2. Modified files: h_page.c mktemp.c